# kq

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
kdlq/: Cargo.toml
kq/: Cargo.toml
kq/src/: cli.rs  evaluation.rs  kdlrs.rs  lib.rs  main.rs  parser.rs
kq/tests/: example_test.rs
kq/tests/accessor_multiple/: mod.rs  website.kdl
kq/tests/accessor_single/: closed_node_name.rs  closed_prop_name_explicit.rs  closed_prop_name_implicit.rs  closed_props.rs  closed_val.rs  closed_values.rs  identifier_closed_node_name.rs  identifier_closed_prop_name_explicit.rs  identifier_closed_prop_name_implicit.rs  identifier_closed_values.rs
src/: cli.rs  evaluation.rs  kdlrs.rs  lib.rs  main.rs  parser.rs
tests/: e2e_test.rs
tests/accessor_single/: closed_type_tag.rs  identifier_closed_props.rs  identifier_closed_type_tag.rs  identifier_closed_val.rs  mod.rs
